force-app/main/default/objects/sbaa__Approval__c/fields/RLM_Account__c.field-meta.xml
<CustomField>
    <fullName>RLM_Account__c</fullName>
    <formula>sbaa__Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>