force-app/main/default/objects/sbaa__Approval__c/fields/RLM_Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>RLM_Date_Requested__c</fullName>
    <formula>DATEVALUE(CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>