force-app/main/default/objects/sbaa__Approval__c/fields/RLM_Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>RLM_Opp_Stage__c</fullName>
    <formula>Text(sbaa__Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Stage</label>
    <type>Text</type>
</CustomField>