force-app/main/default/objects/sbaa__Approval__c/fields/RLM_Payment_Terms2__c.field-meta.xml
<CustomField>
    <fullName>RLM_Payment_Terms2__c</fullName>
    <formula>Text(Quote__r.RLM_Payment_Terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>