force-app/main/default/objects/sbaa__Approval__c/fields/RLM_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>RLM_Quote_Amount__c</fullName>
    <formula>Quote__r.TotalPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>