force-app/main/default/objects/sbaa__Approval__c/fields/RLM_Quote_Discount__c.field-meta.xml
<CustomField>
    <fullName>RLM_Quote_Discount__c</fullName>
    <formula>Quote__r.Discount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>